k8s_deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # 啟用自動 SSL 重定向
spec:
  tls:
      secretName: my-tls-secret  # 憑證的密碼名稱
  rules:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 7415
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # 啟用自動 SSL 重定向
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "upgrade";
spec:
  tls:
      secretName: my-tls-secret  # 憑證的密碼名稱
  rules:
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
